--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "animated": "^0.2.2",
-<<<<<<< HEAD
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -39,17 +38,10 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-=======
-    "bootstrap": "^4.1.1",
-    "chart.js": "^2.7.2",
-    "firebase": "^5.1.0",
-    "moment": "^2.22.2",
->>>>>>> origin/master
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-chartjs-2": "^2.7.2",
     "react-day-picker": "^7.1.9",
-<<<<<<< HEAD
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -116,7 +108,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-=======
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -128,8 +119,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "firebase deploy"
->>>>>>> origin/master
+    "eject": "react-scripts eject"
   }
 }
