--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "myportfolio1",
   "version": "0.1.0",
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
     "animated": "^0.2.2",
@@ -62,7 +66,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "heroku-prebuild": "npm install --production=false"
   },
   "devDependencies": {
     "node-sass": "^4.9.3",
