--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "redux": "^4.0.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
+    "styled-components": "^4.0.3",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
