--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chart.js": "^2.7.2",
+    "cryptiles": "^4.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -36,6 +37,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "macaddress": "^0.2.9",
+    "merge": "^1.2.1",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -56,8 +59,10 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "styled-components": "^4.0.3",
+    "styled-transition-group": "^1.0.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "url-parse": "^1.4.4",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
