--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.11",
     "react-transition-group": "^2.4.0",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
