--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "animated": "^0.2.2",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -46,12 +47,12 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.3.2",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.1",
     "react-chartjs-2": "^2.7.2",
     "react-day-picker": "^7.1.9",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.11",
@@ -71,6 +72,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "client": "node scripts/start.js",
+    "server": "nodemon server.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "deploy": "firebase deploy",
